--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="">Books</a>
+        <a class="nav-item nav-link active" href="book.html">Books</a>
         <a class="nav-item nav-link" href="">Magazines</a>
         <a class="nav-item nav-link" href="">Audiovisuals</a>
       </div>
