--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book Microservice</title>
+  <title>Microservices</title>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
@@ -19,8 +19,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="book.html">Books</a>
-        <a class="nav-item nav-link" href="">Magazines</a>
-        <a class="nav-item nav-link" href="">Audiovisuals</a>
+        <a class="nav-item nav-link" href="magazine.html">Magazines</a>
+        <a class="nav-item nav-link" href="audiovisual.html">Audiovisuals</a>
       </div>
     </div>
   </nav>
